# fast-osm-extraction

./: README.md  extract_with_duckdb_spatial.ipynb
osm-construction-extractor/: Cargo.toml
osm-construction-extractor/src/: main.rs
